<resources>
    <string name="app_name">Pro eLean</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_welcome">Welcome!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_don_t_have_an_account">Don\'t have account?</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_i_agree_with_the">I agree with the</string>
    <string name="str_terms_and_conditions">Terms and Conditions</string>
    <string name="str_already_have_an_account">Already have an account?</string>
    <string name="str_reset_your_password">Reset Your Password</string>
    <string name="str_days">day</string>
    <string name="str_back_to_login">Back to login</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_content_description">Content Description</string>
    <string name="str_home">Home</string>
    <string name="str_inbox">Inbox</string>
    <string name="str_search">Search</string>
    <string name="str_orders">orders</string>
    <string name="str_messages">Messages</string>
    <string name="str_timeline">Timeline</string>
    <string name="str_chat">Chat</string>
    <string name="str_notifications">Notifications</string>
    <string name="str_22">22</string>
    <string name="str_saved">Saved</string>
    <string name="str_freelancer">FreeLancer</string>
    <string name="str_buyer">Buyer</string>
    <string name="str_become_freelancer">Become Freelancer</string>
    <string name="str_seller">Seller</string>
    <string name="str_seller_services">Seller Services</string>
    <string name="str_settings">Settings</string>
    <string name="str_support">Support</string>
    <string name="str_logout">Logout</string>
    <string name="str_subject">Subject</string>
    <string name="str_description">Description</string>
    <string name="str_enter_description">Enter Description</string>
    <string name="str_submit">Submit</string>
    <string name="str_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="str_notification_title">Notification Title</string>
    <string name="str_no_data_available">No data available</string>
    <string name="str_buying">Buying</string>
    <string name="str_nov_25">Nov 25</string>
    <string name="str_title">Title</string>
    <string name="str_contact_seller">Contact Seller</string>
    <string name="str_what_are_you_looking_for">What are you looking for?</string>
    <string name="str_service_categories">Service Categories</string>
    <string name="str_featured_gigs">Featured Services</string>
    <string name="content_description">Content Description</string>
    <string name="service_name">Service Name</string>
    <string name="term_of_services">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="str_service_details">Service Details</string>
    <string name="str_service_gigs">Services</string>
    <string name="str_gigs_details">Services Details</string>
    <string name="str_featured_gigs_details">Featured Service Details</string>
    <string name="str_gig_details">Service Details</string>
    <string name="service_as_described">Service as described</string>
    <string name="price">Price</string>
    <string name="str_delivery_time">Delivery Time</string>
    <string name="str_delivery_note">Delivery Note</string>
    <string name="str_edit_service">Edit Service</string>
    <string name="str_create_service">Create Service</string>
    <string name="str_balance">Balance</string>
    <string name="str_earning_this_month">Earning This Month</string>
    <string name="str_avg_order_price">Avg Order Price</string>
    <string name="str_active_orders">Active Orders</string>
    <string name="str_update_service">Update Service</string>
    <string name="str_update">Update</string>
    <string name="str_select_service">Select Service</string>
    <string name="str_rating">Rating</string>
    <string name="str_short_description">Short Description</string>
    <string name="str_categories">Categories</string>
    <string name="str_subcategories">Subcategories</string>
    <string name="str_subcategory">Subcategory</string>
    <string name="str_delivery_days">Delivery Days</string>
    <string name="str_revisions">Revisions</string>
    <string name="str_service_banners">Service Banners</string>
    <string name="str_additional_info">Additional Info</string>
    <string name="str_publish">Publish</string>
    <string name="str_enter_a_keyword">Enter a keyword</string>
    <string name="str_guest">Guest</string>
    <string name="str_category">Category</string>
    <string name="str_offline">Offline</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="str_search_by_distance_miles">Search By Distance (Miles)</string>
    <string name="str_custom_order">Custom Order</string>
    <string name="str_purchase">Purchase</string>
    <string name="str_user_review">User Review</string>
    <string name="str_username">Username</string>
    <string name="str_user_profile">User Profile</string>
    <string name="str_currency">Currency</string>
    <string name="str_about">About</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_services">Services</string>
    <string name="str_invalid_data">Invalid data</string>
    <string name="str_profile_sucessfully_upated">Profile Successfully Updated</string>
    <string name="str_valid_image">Choose valid image</string>
    <string name="str_please_enter_description">Please enter description</string>
    <string name="str_password_contain">Password must contain at least 6 character</string>
    <string name="str_request_buyer_to_cancel">REQUEST BUYER TO CANCEL ORDER</string>
    <string name="str_referral">Referral code must be numeric</string>
    <string name="str_general">General</string>
    <string name="str_current_balance">Current Balance</string>
    <string name="str_earning_this_year">Earning This Year</string>
    <string name="str_earning_this_week">Earning this week</string>
    <string name="str_gigs_analytics">Gigs Analytics</string>
    <string name="str_weekly">Weekly:</string>
    <string name="str_yearly">Yearly:</string>
    <string name="str_monthly">Monthly:</string>
    <string name="str_buyer_request">Buyer Requests</string>
    <string name="str_manage_service">Manage Services</string>
    <string name="str_impression">Impressions=</string>
    <string name="str_clicks">Clicks=</string>
    <string name="str_exo_player">Player</string>
    <string name="str_4_8">4.8</string>
    <string name="_45">(45)</string>
    <string name="user_information">User Information</string>
    <string name="from">From</string>
    <string name="str_member_since">Member Since</string>
    <string name="str_recent_delivery">Recent Delivery</string>
    <string name="languages">Languages</string>
    <string name="french_english">French, English</string>
    <string name="skills">Skills</string>
    <string name="choose_would_you_like_your_service_delivered">Choose would you like your service delivered?</string>
    <string name="fiftyDollar">50€</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="reviews">Reviews</string>
    <string name="most_recent">Most Recent</string>
    <string name="date">Date</string>
    <string name="str_17_12">17:12</string>
    <string name="str_1">1</string>
    <string name="str_seen">Seen</string>
    <string name="str_enter_message_here">Enter message here…</string>
    <string name="str_post_a_job">Post a Job</string>
    <string name="str_view_posted_jobs">View Posted Jobs</string>
    <string name="str_manage_orders">Manage Orders</string>
    <string name="str_buyer_actions">Buyer Actions</string>
    <string name="str_seller_actions">Seller Actions</string>
    <string name="str_child_categories">Child Categories</string>
    <string name="str_choose_when_you_like_your_service_delivered">Choose when you like your service delivered?</string>
    <string name="str_what_s_your_budget">What\'s your budget?</string>
    <string name="str_submit_your_request">Submit Your Request</string>
    <string name="str_price_min_5">Price (Min. €5)</string>
    <string name="str_jobs">Jobs</string>
    <string name="str_duration">Duration</string>
    <string name="str_budget">Budget</string>
    <string name="str_no_offers_yet">No Offers Yet</string>
    <string name="str_click">Click |</string>
    <string name="str_order">Order | </string>
    <string name="str_order_title">Order</string>
    <string name="str_april_17_2020">April 17, 2020</string>
    <string name="str_completed">Complete</string>
    <string name="str_order_details">Order Details</string>
    <string name="str_seller_submitted">Seller Submitted. Mark it complete if you are satisfied</string>
    <string name="str_download_source">Download Source</string>
    <string name="str_revision">Revision</string>
    <string name="str_resubmit_order">Resubmit Order</string>
    <string name="str_cancel_and_create_dispute">Cancel And Create Dispute</string>
    <string name="str_to_proceed_with_dispute">Proceed with Dispute</string>
    <string name="str_manage_sales">Manage Sales</string>
    <string name="str_buyer_requests">Buyer Requests</string>
    <string name="str_manage_services">Manage Services</string>
    <string name="str_analytics">Analytics</string>
    <string name="str_earnings">Earnings</string>
    <string name="str_weekly_analytics">Weekly Analytics</string>
    <string name="str_seller_mode">Seller Mode</string>
    <string name="str_3_days">3 days</string>
    <string name="str_document">Document</string>
    <string name="str_no_attachment">No Attachment</string>
    <string name="str_send_offer">Send Offer</string>
    <string name="str_applied">Applied</string>
    <string name="str_cancel_offer">Cancel Offer</string>
    <string name="str_area_chart">Area Chart</string>
    <string name="str_total_earnings">Total Earnings</string>
    <string name="str_total_completed_orders">Total Completed Orders</string>
    <string name="str_12">12</string>
    <string name="str_average_selling_price">Average Selling Price</string>
    <string name="str_earned_this_month">Earned This Month</string>
    <string name="str_withdraw">Withdraw</string>
    <string name="str_great_we_have_sent">Great! We have sent you a text message with a secure code to your registered phone</string>
    <string name="str_bank_name">Bank Name</string>
    <string name="str_bank_details">Bank Details</string>
    <string name="str_bank_code">Bank Code</string>
    <string name="str_view_offers">View Offers</string>
    <string name="str_choose_image">Choose your profile picture</string>
    <string name="str_choose_attachment">Choose your attachment</string>
    <string name="str_camera">Take Photo</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_image">Image</string>
    <string name="str_video_and_pdf">Video/Pdf</string>
    <string name="str_profile">Profile</string>
</resources>