<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/_7sdp"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:text="@string/str_choose_image"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_15ssp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_camera"
            style="@style/New.TextButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtons"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/str_camera"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite">
        </Button>

        <Button
            android:id="@+id/btn_gallery"
            style="@style/New.TextButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/str_gallery"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/_10sdp">
        </Button>

        <Button
            android:id="@+id/btn_no"
            style="@style/New.TextButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDarkGrey"
            android:text="@string/str_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/_10sdp">
        </Button>

    </LinearLayout>
</LinearLayout>